# backend/microServAuth/docs/swagger.yaml
@@ -1,13 +1,5 @@
 basePath: /
-definitions:
-  handlers.LoginRequest:
-    properties:
-      email:
-        type: string
-      password:
-        type: string
-    type: object
-host: localhost:7001
+host: localhost:8001
 info:
   contact:
     email: benjamin.guerre@viacesi.fr
@@ -17,6 +9,31 @@ info:
   title: Swagger Easeat Auth API
   version: "1.0"
 paths:
+  /{code}:
+    get:
+      consumes:
+      - application/json
+      description: Sponsorise a user with sponsorship code
+      parameters:
+      - description: Sponsorship code
+        in: path
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: "msg\":\t\"ok"
+          schema:
+            type: string
+        "400":
+          description: "msg\":\t\"User not found in session"
+          schema:
+            type: string
+      summary: Sponsorise a user by code
+      tags:
+      - sponso
   /auth/logout:
     post:
       consumes:
@@ -97,65 +114,25 @@ paths:
       summary: Reset password
       tags:
       - auth
-  /canAccess/{roleId}:
+  /myCode:
     get:
       consumes:
       - application/json
-      description: Check if the user has the right role
-      parameters:
-      - description: Role id
-        in: path
-        name: roleId
-        required: true
-        type: integer
+      description: Get my sponsorship code
       produces:
       - application/json
       responses:
         "200":
-          description: OK
-          schema:
-            type: string
-        "403":
-          description: Forbidden
-          schema:
-            type: string
-      summary: Check if the user has the right role
-      tags:
-      - middlewares
-  /login:
-    post:
-      consumes:
-      - application/json
-      description: Login
-      parameters:
-      - description: Login request
-        in: body
-        name: loginRequest
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
+          description: "msg\":\t\"ok"
           schema:
             type: string
         "400":
-          description: Bad Request
+          description: "msg\":\t\"User not found in session"
           schema:
             type: string
-        "401":
-          description: Unauthorized
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Login
+      summary: Get my sponsorship code
       tags:
-      - auth
+      - sponso
   /public/forgotPassword:
     post:
       consumes:
